K8s/comments-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: comments
  template:
    metadata:
      labels:
        component: comments
    spec:
      containers:
        - name: comments
          image: tyjonnes/comments:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    component: comments
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
