K8s/event-bus-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: event-bus
  template:
    metadata:
      labels:
        component: event-bus
    spec:
      containers:
        - name: event-bus
          image: tyjonnes/event-bus:latest
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    component: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
