K8s/moderation-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: moderation
  template:
    metadata:
      labels:
        component: moderation
    spec:
      containers:
        - name: moderation
          image: tyjonnes/moderation:latest
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    component: moderation
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
