K8s/posts-clusterip-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: posts
  template:
    metadata:
      labels:
        component: posts
    spec:
      containers:
        - name: posts
          image: tyjonnes/posts:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    component: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
