K8s/query-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: query
  template:
    metadata:
      labels:
        component: query
    spec:
      containers:
        - name: query
          image: tyjonnes/query:latest
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    component: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
